--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <p><font size="4" color="red" >This is an anonymized link for supplemental material of IJCAI submission (Paper ID: 50).</font> </p> 
-<p><font size="4" color="red" >Paper Title: Incorporating Relation Paths for Knowledge Base Completion via Joint Adversarial Training. </font> </p>
+<p><font size="4" color="red" >Paper Title: Hierarchical Attention Based Adversarial Neural Networks for Knowledge Base Completion. </font> </p>
 
 <h1><font size="5" color="black" >1 Experiment Details</font> </h1>
 <h1><font size="4" color="black" >1.1 Relation frequency distribution of datasets</font> </h1>
