--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <p><font size="4" color="red" >This is an anonymized link for supplemental material of IJCAI submission (Paper ID: 50).</font> </p> 
-<p><font size="4" color="red" >Paper Title: IHierarchical Attention Based Adversarial Neural Networks for Knowledge Base Completion. </font> </p>
+<p><font size="4" color="red" >Paper Title: Hierarchical Attention Based Adversarial Neural Networks for Knowledge Base Completion. </font> </p>
 
 <p align="center"><img src="./figure/p1.png" id="ds"> </p>
 <p align="center"><img src="./figure/fig1.png" id="ds"> </p>
